home button on emojis page

--- a/Update.html
+++ b/Update.html
@@ -117,6 +117,7 @@
         <h3 class="quality-of-life">Quality of life</h3>
         <ul>
             <li>Pressing enter for adding/removing custom regexes will perform the action</li>
+            <li>Home button in emojis page</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
