--- a/Emojis/index.html
+++ b/Emojis/index.html
@@ -56,6 +56,9 @@
         .result-counter{
             font-size:2.5em;
         }
+        #home-link{
+            color:blue;
+        }
     </style>
     <title>Emojis</title>
     <script>
@@ -63,6 +66,9 @@
     </script>
 </head>
 <body style="text-align: center;font-size:large;font-family:Arial, Helvetica, sans-serif">
+    <header>
+        <h1 style="font-size:3.8em;"><a href="../index.html" id="home-link">Home</a></h1>
+    </header>
     <input type="text" style="width:1px;background-color:transparent;color:transparent;z-index:-1;height:1px;z-index: -10;position:absolute;top:-100px" id="emoji-copy">
     <input type="text" name="search" id="search" class="search" value="" placeholder="search">
     <span class="result-counter" id="results-counter">Results: </span>
