removed c-upsidedown, not auto-close closing-html-elements, optimize emoji search

--- a/Update.html
+++ b/Update.html
@@ -126,11 +126,14 @@
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>Ctrl + number now goes to the right tab</li>
+            <li>Optimized emoji search</li>
+            <li>Using closing tag will not do auto-close if autocomplete html elements is on</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
             <li>c-time</li>
             <li>c-unicode</li>
+            <li>c-upsidedown</li>
         </ul>
     </div>
     <hr>
