removed c-prompt, c-confirm

--- a/Update.html
+++ b/Update.html
@@ -134,6 +134,8 @@
             <li>c-time</li>
             <li>c-unicode</li>
             <li>c-upsidedown</li>
+            <li>c-prompt</li>
+            <li>c-confirm</li>
         </ul>
     </div>
     <hr>
