--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <button id="ui-title" class="bar-section-title" title="ui colors" style="float:right;margin-right:1.5vw">
             UI ⚙️
         </button>
+        <span class="save-icon">Saved</span>
         <div id="custom-regex" class="bar-section">
             <fieldset>
                 <input type="text" id="custom-regex-searcher" placeholder="Search Regular expression" style="width:15%;" title="the regular expression that will be used as find">
