--- a/Update.html
+++ b/Update.html
@@ -113,6 +113,7 @@
         <ul>
             <li>Auto tab</li>
             <li>Descriptions for each setting in options tab</li>
+            <li>Save at the top that says if it is saved</li>
         </ul>
         <h3 class="quality-of-life">Quality of life</h3>
         <ul>
