--- a/Update.html
+++ b/Update.html
@@ -107,6 +107,20 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.6.2">
+        <h2 class="version-num">1.6.2</h2>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>saved isn't ontop of everything</li>
+            <li>{cursor:type:text} can now be {cursor:type<br>text}</li>
+        </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>Mathjax duplication</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.6.1">
         <h2 class="version-num">1.6.1</h2>
         <h3 class="added">Additions</h3>
