shows mathjax in preview

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                 <span class="divider"></span>
                 <label class="option-item" title="Whether or not to use the markdown i made, and you added"><input title="(F4)" type="checkbox" id="custom" checked>Custom markdown?</label>
                 <span class="divider" dashed></span>
+                <label for="" class="option-item" title="enables standard mathjax"><input type="checkbox" id="mathjax" checked="checked" title="Use Mathjax (F9)">Mathjax?</label>
                 <label class="option-item" title="When doing code blocks the code will be highlighted"><input type="checkbox" id="syntax-parsing" checked>Syntax Highlighting?</label>
                 <span class="divider"></span>
                 <label class="option-item" title="scrolling in the preview will scroll in the text editor and vice versa"><input type="checkbox" id="syncscrolling" onclick="SyncScrolling = !SyncScrolling">Sync Scrolling?</label>                    <span class="divider"></span>
