--- a/Update.html
+++ b/Update.html
@@ -117,6 +117,7 @@
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>Mathjax duplication</li>
+            <li>Improved auto tab</li>
         </ul>
     </div>
     <hr>
