--- a/Update.html
+++ b/Update.html
@@ -109,6 +109,17 @@
     <hr>
     <div class="version-container" id="1.6.2">
         <h2 class="version-num">1.6.2</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>DataLists</li>
+            <ul>
+                <li>
+                    Usable by doing:
+                    <pre>| item1
+| item2</pre>
+                </li>
+            </ul>
+        </ul>
         <h3 class="changed">Changes</h3>
         <ul>
             <li>saved isn't ontop of everything</li>
