default text-indent

--- a/Update.html
+++ b/Update.html
@@ -119,6 +119,7 @@
 | item2</pre>
                 </li>
             </ul>
+            <li>Default to indent-> text</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
