--- a/Update.html
+++ b/Update.html
@@ -99,6 +99,8 @@
             <li><a href="#1.6">1.6</a></li>
             <ul>
                 <li><a href="#1.6.1">1.6.1</a></li>
+                <li><a href="#1.6.2">1.6.2</a></li>
+                <li><a href="#1.6.3">1.6.3</a></li>
             </ul>
         </ul>
     </ul>
@@ -107,6 +109,21 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.6.3">
+        <h2 class="version-num">1.6.3</h2>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>> PRO and > CON are case insensitive</li>
+            <li>> ''text''[author] is now
+                <br>
+                > text
+                <br>
+                - author
+            </li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.6.2">
         <h2 class="version-num">1.6.2</h2>
         <h3 class="added">Additions</h3>
