--- a/index.html
+++ b/index.html
@@ -208,9 +208,7 @@
             <span class="divider"></span>
             <wbr>
             <button class="editing-button" onclick='startEndTypeInTextArea("[", "]:()", {cursor:-1})' title="Definition Layout"><u>A</u>:<i>a</i></button>
-            <button class="editing-button popup-button-trigger" onclick="typeInTextarea(`''''`, 2)" title="Quotation, (ctrl + q)">''A''
-                <button class="editing-button popup-button" onclick="typeInTextarea('> \'\'\'\'[author]', 4)" title="Block quote (ctrl + shift + b)">> ''A''[a]</button>
-            </button>
+            <button class="editing-button" onclick="typeInTextarea(`''''`, 2)" title="Quotation, (ctrl + q)">''A''</button>
             <span class="divider" style="border-style: dashed;"></span>
             <button class="editing-button" onclick="startEndTypeInTextArea('\\^[', ']')" title="Superscript, (ctrl + .)">A<sup>a</sup></button>
             <button class="editing-button" onclick="startEndTypeInTextArea('\\_[', ']')" title="Subscript, (ctrl + ,)">A<sub>a</sub></button>
