--- a/Update.html
+++ b/Update.html
@@ -121,6 +121,10 @@
                 - author
             </li>
         </ul>
+        <h3 class="removed">Removed</h3>
+        <ul>
+            <li>&lt;c-circled&gt;</li>
+        </ul>
     </div>
     <hr>
     <br>
