--- a/Update.html
+++ b/Update.html
@@ -111,6 +111,10 @@
     <hr>
     <div class="version-container" id="1.6.3">
         <h2 class="version-num">1.6.3</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>\function =><br>javascript<br>END</li>
+        </ul>
         <h3 class="changed">Changes</h3>
         <ul>
             <li>> PRO and > CON are case insensitive</li>
