--- a/Update.html
+++ b/Update.html
@@ -124,6 +124,7 @@
                 <br>
                 - author
             </li>
+            <li>{cursor:type:text} is now cursor[type]text|</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
