--- a/Update.html
+++ b/Update.html
@@ -129,6 +129,7 @@
         <h3 class="removed">Removed</h3>
         <ul>
             <li>&lt;c-circled&gt;</li>
+            <li>:= as shortcut for &Assign;</li>
         </ul>
     </div>
     <hr>
