--- a/Update.html
+++ b/Update.html
@@ -114,6 +114,7 @@
         <h3 class="added">Additions</h3>
         <ul>
             <li>\function =><br>javascript<br>END</li>
+            <li>summary markers now have a space by default</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
