--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
                     <option value="HIGHLIGHT" title="syntax highlighting for code blocks">highlight</option>
                     <option value="L#" title="line numbers for code blocks">line numbers</option>
                     <option value="CSSCOLOR" title="css color previews for code blocks">color</option>
+                    <option value="SUMMARYMARKER" title="summary markers for detail-summaries">summary marker</option>
                 </optgroup>
             </select>
             <wbr>
