--- a/Update.html
+++ b/Update.html
@@ -115,6 +115,7 @@
         <ul>
             <li>\function =><br>javascript<br>END</li>
             <li>summary markers now have a space by default</li>
+            <li>_html class for styling, covers the whole body</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
