--- a/Update.html
+++ b/Update.html
@@ -109,8 +109,8 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
-    <div class="version-container" id="1.6.3">
-        <h2 class="version-num">1.6.3</h2>
+    <div class="version-container" id="1.7.0">
+        <h2 class="version-num">1.7.0</h2>
         <h3 class="added">Additions</h3>
         <ul>
             <li>\function =><br>javascript<br>END</li>
@@ -127,6 +127,7 @@
                 - author
             </li>
             <li>{cursor:type:text} is now cursor[type]text|</li>
+            <li>#[color]text| to #color -> text|</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
