--- a/Update.html
+++ b/Update.html
@@ -116,6 +116,8 @@
             <li>\function =><br>javascript<br>END</li>
             <li>summary markers now have a space by default</li>
             <li>_html class for styling, covers the whole body</li>
+            <li>#color -> text| in addition to the other way</li>
+            <li>ssize -> text| in addition to the other way</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
@@ -127,7 +129,6 @@
                 - author
             </li>
             <li>{cursor:type:text} is now cursor[type]text|</li>
-            <li>#[color]text| to #color -> text|</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
