--- a/Update.html
+++ b/Update.html
@@ -118,6 +118,7 @@
             <li>_html class for styling, covers the whole body</li>
             <li>#color -> text| in addition to the other way</li>
             <li>ssize -> text| in addition to the other way</li>
+            <li>ffont -> text| in addition to the other way</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
