--- a/Update.html
+++ b/Update.html
@@ -116,6 +116,9 @@
             <li>\function =><br>javascript<br>END</li>
             <li>summary markers now have a space by default</li>
             <li>_html class for styling, covers the whole body</li>
+            <li>#color->text|</li>
+            <li>ssize->text|</li>
+            <li>ffont->text|</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
