--- a/Update.html
+++ b/Update.html
@@ -131,6 +131,10 @@
             </li>
             <li>{cursor:type:text} is now cursor[type]text|</li>
         </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>\count works as intended</li>
+        </ul>
         <h3 class="removed">Removed</h3>
         <ul>
             <li>&lt;c-circled&gt;</li>
