--- a/Update.html
+++ b/Update.html
@@ -119,6 +119,8 @@
             <li>#color->text|</li>
             <li>ssize->text|</li>
             <li>ffont->text|</li>
+            <li>%today%</li>
+            <li>%now%</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
