left + right click

--- a/Update.html
+++ b/Update.html
@@ -121,6 +121,8 @@
             <li>ffont->text|</li>
             <li>%today%</li>
             <li>%now%</li>
+            <li>"text" c><br>javascript<br>END</li>
+            <li>"text" r><br>javascript<br>END</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
