--- a/Update.html
+++ b/Update.html
@@ -123,6 +123,7 @@
             <li>%now%</li>
             <li>"text" c><br>javascript<br>END</li>
             <li>"text" r><br>javascript<br>END</li>
+            <li>||text||</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
