old text[title]

--- a/Update.html
+++ b/Update.html
@@ -144,6 +144,7 @@
         <ul>
             <li>&lt;c-circled&gt;</li>
             <li>:= as shortcut for &Assign;</li>
+            <li>old way of "text"[title]</li>
         </ul>
     </div>
     <hr>
