--- a/Update.html
+++ b/Update.html
@@ -145,6 +145,7 @@
             <li>&lt;c-circled&gt;</li>
             <li>:= as shortcut for &Assign;</li>
             <li>old way of "text"[title]</li>
+            <li>{shadow text}</li>
         </ul>
     </div>
     <hr>
