--- a/Update.html
+++ b/Update.html
@@ -146,6 +146,7 @@
             <li>:= as shortcut for &Assign;</li>
             <li>old way of "text"[title]</li>
             <li>{shadow text}</li>
+            <li>{whitespace}</li>
         </ul>
     </div>
     <hr>
