--- a/Update.html
+++ b/Update.html
@@ -102,6 +102,7 @@
                 <li><a href="#1.6.2">1.6.2</a></li>
             </ul>
             <li><a href="#1.7.0">1.7.0</a></li>
+            <li><a href="#1.7.1">1.7.1</a></li>
         </ul>
     </ul>
     </div>
@@ -109,6 +110,15 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <hr>
+    <br>
+    <div class="version-container" id="1.7.1">
+        <h2 class="version-num">1.7.1</h2>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>#[id] is now #id (must take up whole line)</li>
+        </ul>
+    </div>
     <div class="version-container" id="1.7.0">
         <h2 class="version-num">1.7.0</h2>
         <h3 class="added">Additions</h3>
