--- a/Update.html
+++ b/Update.html
@@ -102,7 +102,7 @@
                 <li><a href="#1.6.2">1.6.2</a></li>
             </ul>
             <li><a href="#1.7.0">1.7.0</a></li>
-            <li><a href="#1.7.1">1.7.1</a></li>
+            <li><a href="#1.8.0">1.8.0</a></li>
         </ul>
     </ul>
     </div>
@@ -112,11 +112,21 @@
     <hr>
     <hr>
     <br>
-    <div class="version-container" id="1.7.1">
-        <h2 class="version-num">1.7.1</h2>
+    <div class="version-container" id="1.8.0">
+        <h2 class="version-num">1.8.0</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>\load -> javascript</li>
+            <ul>
+                <li>When page is loaded it will do that</li>
+                <li>if you want there to be text use replaceThis("return value")</li>
+            </ul>
+        </ul>
         <h3 class="changed">Changes</h3>
         <ul>
             <li>#[id] is now #id (must take up whole line)</li>
+            <li>how undo works</li>
+            li{Things ending with END now end with ;}
         </ul>
     </div>
     <div class="version-container" id="1.7.0">
