--- a/Update.html
+++ b/Update.html
@@ -126,7 +126,7 @@
         <ul>
             <li>#[id] is now #id (must take up whole line)</li>
             <li>how undo works</li>
-            li{Things ending with END now end with ;}
+            <li>Things ending with END now end with ;</li>
         </ul>
     </div>
     <div class="version-container" id="1.7.0">
