--- a/Update.html
+++ b/Update.html
@@ -103,6 +103,9 @@
             </ul>
             <li><a href="#1.7.0">1.7.0</a></li>
             <li><a href="#1.8.0">1.8.0</a></li>
+	    <li>
+	        <a href="#1.8.1">1.8.1</a>
+	    </li>
         </ul>
     </ul>
     </div>
@@ -110,6 +113,14 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <br>
+    <div class="version-container">
+        <h2 class="version-num">1.8.1</h2>
+	<h3 class="removed">Removed</h3>
+	<ul>
+	    <li>Removed unecessary shortcuts</li>
+	</ul>
+    </div>
     <hr>
     <br>
     <div class="version-container" id="1.8.0">
