--- a/Update.html
+++ b/Update.html
@@ -105,6 +105,7 @@
             <li><a href="#1.8.0">1.8.0</a></li>
 	    <li>
 	        <a href="#1.8.1">1.8.1</a>
+		<a href="#1.8.2">1.8.2</a>
 	    </li>
         </ul>
     </ul>
@@ -112,6 +113,15 @@
     <div id="main">
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
+    <hr>
+    <br>
+    <div class="version-container">
+        <h2 class="version-num">1.8.2</h2>
+        <h3 class="removed">Removed</h3>
+        <ul>
+            <li>Alert element</li>
+        </ul>
+    </div>
     <hr>
     <br>
     <div class="version-container">
