--- a/Update.html
+++ b/Update.html
@@ -117,6 +117,10 @@
     <br>
     <div class="version-container">
         <h2 class="version-num">1.8.2</h2>
+	<h3 class="fixed">Fixes</h3>
+	<ul>
+	    <li>Button colors in dark mode being weird</li>
+	</ul>
         <h3 class="removed">Removed</h3>
         <ul>
             <li>Alert element</li>
