--- a/Update.html
+++ b/Update.html
@@ -124,6 +124,7 @@
         <h3 class="removed">Removed</h3>
         <ul>
             <li>Alert element</li>
+            <li>c-textbox + shortcut</li>
         </ul>
     </div>
     <hr>
