_link, _double, _overline, _dotted, _wavy, _underline

--- a/Update.html
+++ b/Update.html
@@ -117,10 +117,15 @@
     <br>
     <div class="version-container">
         <h2 class="version-num">1.8.2</h2>
-	<h3 class="fixed">Fixes</h3>
-	<ul>
-	    <li>Button colors in dark mode being weird</li>
-	</ul>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>_link class</li>
+            <li>_double, _overline, _dotted, _wavy, _unerline</li>
+        </ul>
+	    <h3 class="fixed">Fixes</h3>
+	    <ul>
+	        <li>Button colors in dark mode being weird</li>
+	    </ul>
         <h3 class="removed">Removed</h3>
         <ul>
             <li>Alert element</li>
